cluster/apps/home-cloud/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: home-cloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: lscr.io/linuxserver/nextcloud:24.0.4
          resources: {}
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          ports:
            - containerPort: 443
              name: https
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nextcloud-config-v1
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-data-v1
