cluster/apps/home-cloud/nextcloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: home-cloud
spec:
  selector:
    app: nextcloud
  ports:
    - port: 443
      targetPort: https
      name: https
  type: LoadBalancer
  loadBalancerIP: ${SVC_NEXTCLOUD_ADDR}
