cluster/apps/home-cloud/nextcloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: home-cloud
  labels:
    name: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
spec:
  rules:
    - host: &host "nextcloud.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nextcloud
                port:
                  name: https
  tls:
    - hosts:
        - *host
